--- a/res/layout/activity_manager.xml
+++ b/res/layout/activity_manager.xml
@@ -188,7 +188,7 @@
 		        android:id="@+id/used_space_text"
 	            android:layout_width="fill_parent"
 	            android:layout_height="wrap_content"
-	            android:text="@string/used_space_text" 
+	            android:text="@string/my_account_used_space" 
 	            android:textColor="@color/navigation_drawer_text"
 	            android:paddingTop="10dp"
 	            android:paddingLeft="10dp"
