--- a/res/layout/activity_upgrade.xml
+++ b/res/layout/activity_upgrade.xml
@@ -26,7 +26,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="35dp" 
                 android:textSize="20sp"
-                android:text="@string/general_pro_1"
+                android:text="@string/pro1_account"
                 android:layout_below="@id/pro1_image"/>
             
             <TextView
@@ -103,7 +103,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="35dp" 
                 android:textSize="20sp"
-                android:text="@string/general_pro_2"
+                android:text="@string/pro2_account"
                 android:layout_below="@id/pro2_image"/>
             
             <TextView
@@ -179,7 +179,7 @@
                 android:layout_height="wrap_content"
                 android:textSize="20sp"
                 android:layout_marginLeft="35dp"                
-                android:text="@string/general_pro_3"
+                android:text="@string/pro3_account"
                 android:layout_below="@id/pro3_image"/>
             
             <TextView
