--- a/res/layout/cell_grid_fill.xml
+++ b/res/layout/cell_grid_fill.xml
@@ -15,6 +15,87 @@
         android:layout_marginTop="5dp"
         android:descendantFocusability="blocksDescendants" >
         
+        <LinearLayout 
+            android:id="@+id/cell_menu_layout"
+            android:layout_width="172dp"
+            android:layout_height="157dp"
+            android:visibility="gone"
+            android:background="@drawable/background_item_grid_menu_layout"
+            android:layout_centerHorizontal="true"
+            android:orientation="vertical">
+            
+            <LinearLayout
+                android:id="@+id/cell_menu_layout_first_row"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal"
+                android:layout_weight="1">
+                
+                <ImageView
+		            android:id="@+id/grid_menu_layout_option_download"
+		            android:layout_width="match_parent"
+		            android:layout_height="match_parent"
+		            android:src="@drawable/ic_download"
+		            style="@style/dialogActionButton" 
+		            android:layout_weight="1"/>
+                
+                <ImageView
+		            android:id="@+id/grid_menu_layout_option_properties"
+		            android:layout_width="match_parent"
+		            android:layout_height="match_parent"
+		            android:src="@drawable/ic_properties"
+		            style="@style/dialogActionButton" 
+		            android:layout_weight="1"/>
+            </LinearLayout>
+            
+            <LinearLayout
+                android:id="@+id/cell_menu_layout_second_row"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal"
+                android:layout_weight="1">
+                
+                <ImageView
+		            android:id="@+id/grid_menu_layout_option_delete"
+		            android:layout_width="match_parent"
+		            android:layout_height="match_parent"
+		            android:src="@drawable/ic_delete"
+		            style="@style/dialogActionButton" 
+		            android:layout_weight="1"/>
+                
+                <ImageView
+		            android:id="@+id/grid_menu_layout_option_overflow"
+		            android:layout_width="match_parent"
+		            android:layout_height="match_parent"
+		            android:src="@drawable/ic_action_core_overflow"
+		            style="@style/dialogActionButton" 
+		            android:layout_weight="1"/>
+            </LinearLayout>
+            
+<!--             <ImageView
+	            android:id="@+id/grid_menu_layout_option_download"
+	            android:layout_width="wrap_content"
+	            android:layout_height="wrap_content"
+	            android:src="@drawable/ic_download"
+	            android:layout_marginLeft="10dp"
+	            android:layout_marginTop="10dp"
+	            android:layout_alignParentLeft="true"
+	            android:layout_alignParentTop="true"
+	            style="@style/dialogActionButton" />
+            
+            <ImageView
+	            android:id="@+id/grid_menu_layout_option_properties"
+	            android:layout_width="wrap_content"
+	            android:layout_height="wrap_content"
+	            android:src="@drawable/ic_properties"
+	            android:layout_marginRight="10dp"
+	            android:layout_marginTop="10dp"
+	            android:layout_alignParentRight="true"
+	            android:layout_alignParentTop="true"
+	            style="@style/dialogActionButton" />
+      -->       
+        </LinearLayout>
+        
         <ImageButton
 	        android:id="@+id/cell_thumbnail"
 	        android:layout_width="157dp"
