--- a/res/layout/item_file_grid_list.xml
+++ b/res/layout/item_file_grid_list.xml
@@ -4,5 +4,6 @@
    	android:layout_height="wrap_content"
    	android:layout_gravity="center|fill_horizontal"
    	android:orientation="horizontal"
-  	android:background="@color/grid_background">
+  	android:background="@color/grid_background"
+  	android:layout_centerHorizontal="true">
 </LinearLayout>
