--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -94,6 +94,13 @@
     <style name="login_activity" parent="@style/Theme.AppCompat.Light">
         <item name="android:windowNoTitle">true</item>
     </style>
+    
+    <style name="Theme.AppCompat.Light.NoActionBar.FullScreen" parent="@style/Theme.AppCompat.Light">
+	    <item name="android:windowNoTitle">true</item>
+	    <item name="windowActionBar">false</item>
+	    <item name="android:windowFullscreen">true</item>
+	    <item name="android:windowContentOverlay">@null</item>
+	</style>
             
     <style name="full_screen_image_activity" parent="@style/Theme.AppCompat.Light">
         <item name="android:windowNoTitle">true</item>
