--- a/res/layout/item_photo_sync_list.xml
+++ b/res/layout/item_photo_sync_list.xml
@@ -19,7 +19,8 @@
 	        android:layout_height="match_parent"
 	        android:checked="false"
 	        android:focusable="false"
-	        android:layout_centerVertical="true" />
+	        android:layout_centerVertical="true"
+	        android:button="@drawable/btn_check_holo_light" />
 	    
 	    <ImageView
 	        android:id="@+id/photo_sync_list_thumbnail"
